--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.4
+  add_2_calendar: ^3.0.1
 
 dev_dependencies:
   flutter_test:
